SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Distributors</relationshipLabel>
        <relationshipName>AccountDistributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>