SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </CustomField>