SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/DistributorName__c.field-meta.xml
<CustomField>
        <fullName>DistributorName__c</fullName>
        <formula>Distributor__r.Name</formula>
        <label>Distributor Name</label>
        <type>Text</type>
    </CustomField>