SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/External_Id_Aperity__c.field-meta.xml
<CustomField>
        <fullName>External_Id_Aperity__c</fullName>
        <label>External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>