SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/SalesRepTeamID__c.field-meta.xml
<CustomField>
        <fullName>SalesRepTeamID__c</fullName>
        <label>Sales Rep Team ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>