SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/SourceID__c.field-meta.xml
<CustomField>
        <fullName>SourceID__c</fullName>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>