SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/Team__c.field-meta.xml
<CustomField>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>