SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <formula>TEXT(Account__r.Territory__c)</formula>
        <label>Territory</label>
        <type>Text</type>
    </CustomField>