SFUSA/force-app/main/default/objects/AccountDistributor__c/fields/WarehouseID__c.field-meta.xml
<CustomField>
        <fullName>WarehouseID__c</fullName>
        <externalId>true</externalId>
        <label>Warehouse ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>